<resources>
    <string name="app_name">DevDays3</string>
    <string name="title">To Do List Application (TM)</string>
    <string name="add">Add</string>
    <string name="add_an_item">Add an Item</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="subTitle">My To Do List</string>
    <string name="add_a_task">Add a task</string>
</resources>